--- a/client/css/style.css
+++ b/client/css/style.css
@@ -26,10 +26,18 @@ label {
 input,
 button {
   width: 100%;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+textarea {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  height: 100px;
 }
 
 button {
